--- a/StormWeb/Views/Staff/Index.cshtml
+++ b/StormWeb/Views/Staff/Index.cshtml
@@ -44,8 +44,8 @@ $(function () {
                     <table class="data-tbl-simple table table-bordered dataTable">
                         <thead>
                             <tr>
-                                <th>
-                                    <i class="color-icons user_co"></i>Staff
+                                <th> 
+                                    <i class="color-icons user_business_co"></i>Staff
                                 </th>
                                 <th>
                                     <i class="color-icons book_addresses_co"></i>Contact
