--- a/StormWeb/Content/css/my_custom.css
+++ b/StormWeb/Content/css/my_custom.css
@@ -392,3 +392,21 @@ a.tab-background-orange
     padding-right: 20px;
 }
 
+/** Body Load **/
+.body-load 
+{
+    position:fixed;
+    top:50%;
+    left:50%;
+    z-index:1104;
+}
+
+#body-curtain
+{
+    position: fixed;
+background-color: rgba(255, 255, 255, 0.79);
+width: 3000px;
+height: 3000px;
+z-index: 1000;
+top: 0px;
+}
