--- a/StormWeb/Views/Material/DeleteOrder.cshtml
+++ b/StormWeb/Views/Material/DeleteOrder.cshtml
@@ -4,40 +4,59 @@
     ViewBag.Title = "DeleteOrder";
 }
 
-<h2>DeleteOrder</h2>
+<div class="row-fluid">
+    <div class="span12">
+        <div class="box-tab">
+            <div class="page-header">
+            <h1> &nbsp;&nbsp;Delete Order </h1>
+            </div>
+            <div class="widget-content">
+                <div class="widget-box" style="padding: 15px;">
 
 <h3>Are you sure you want to delete this?</h3>
-<fieldset>
-    <legend>Material_Order</legend>
 
-    <div class="display-label">Quantity</div>
-    <div class="display-field">
+ @using (Html.BeginForm())
+ {
+    <table class="data-tbl-simple table table-bordered dataTable ">
+   <tr><th><div class="display-label">Name</div></th>
+    <td><div class="display-field">
+        @Html.DisplayFor(model => model.Material.Name)
+    </div></td></tr> 
+
+    <tr><th><div class="display-label">Quantity</div></th>
+    <td><div class="display-field">
         @Html.DisplayFor(model => model.Quantity)
-    </div>
+    </div></td></tr>
 
-    <div class="display-label">RequestedBy</div>
-    <div class="display-field">
+    <tr><th><div class="display-label">Requested By</div></th>
+    <td><div class="display-field">
         @Html.DisplayFor(model => model.RequestedBy)
-    </div>
+    </div></td></tr>
 
-    <div class="display-label">Type</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Type)
-    </div>
-
-    <div class="display-label">RequestedOn</div>
-    <div class="display-field">
+    <tr><th><div class="display-label">Requested On</div></th>
+    <td><div class="display-field">
         @Html.DisplayFor(model => model.RequestedOn)
-    </div>
+    </div></td></tr>
 
-    <div class="display-label">Material_ID</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Material_ID)
-    </div>
-</fieldset>
-@using (Html.BeginForm()) {
-    <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
-}
+    <tr><th><div class="display-label">Status</div></th>
+    <td><div class="display-field">
+        @Html.DisplayFor(model => model.Status)
+    </div></td></tr>
+
+    <tr><th><div class="display-label">Branch</div></th>
+    <td><div class="display-field">
+        @Html.DisplayFor(model => model.Branch)
+    </div></td></tr>
+</table>
+<p>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+    
+</p>
+
+ }
+
+</div>
+</div>
+</div>
+</div>
+</div>
