--- a/StormWeb/Views/Message/Sent.cshtml
+++ b/StormWeb/Views/Message/Sent.cshtml
@@ -2,12 +2,12 @@
 <script type="text/javascript">
     $(function () {
         $('a[name*="deleteBtnSent"]').click(function () {
-            
+           
             $.ajax({
                 type:'GET',
                 url: 'Message/DeleteSent/',
                 data: {
-                    id: $(this).attr("href")
+                    id: $(this).attr("href") 
                 },
                 success: function (data) {
                     $("#outboxMessage").html(data);
@@ -18,7 +18,7 @@
             $('.mydata-tbl-sent').dataTable({
 					    "aaSorting": [[0, 'desc']],
                         "aoColumnDefs": [
-						    { "bSortable": false, "aTargets": [ 3 ] }
+						    { "bSortable": false, "aTargets": [ 1,4 ] }
 					    ],                        
                         "aaColumns": [
                             null,
@@ -35,11 +35,77 @@
 
         });
     });
+</script>
+<script type="text/javascript">
 
+     $(function () {
+
+            $('a[name*="deleteCkbSent"]').click(function () {
+           
+                    var final = '';
+                    $('.ads_Checkbox:checked').each(function(){        
+                    var values = $(this).val();
+                    if(final=="")
+                        final = values + "_";
+                    else
+                        final+=values + "_";
+                    }); 
+     
+
+                    $.ajax({
+                        type:'GET',
+                        url: 'Message/DeleteMultipleSent/',
+                        data: {
+                            id: $(this).attr("href"),
+                            chkDelete :final
+                        },
+                        success: function (data) {
+                            $("#outboxMessage").html(data);
+                        }
+                    });
+            }); 
+          
+    });
+</script>
+<script type="text/javascript">
+    $(function () {
+        $("#dialog-confirm").dialog({
+            resizable: false,
+            height: 140,
+            modal: true,
+            autoOpen: false
+        });
+
+        $("#ckbdeleteall").hide();
+
+        $(".ads_Checkbox").click(function () {
+            var final = '';
+            $('.ads_Checkbox:checked').each(function () {
+                var values = $(this).val();
+                if (final == "")
+                    final = values + "_";
+                else
+                    final += values + "_";
+            });
+
+            if (final == '') {
+                $("#ckbdeleteall").hide();
+            }
+            else {
+                $("#ckbdeleteall").show();
+            }
+        });
+    });
+
+ 
 </script>
 <table class="mydata-tbl-sent table table-bordered">
     <thead>
         <tr>
+            <th> 
+                 <a class="btn btn-danger" id="ckbdeleteall" data-toggle="modal" href="#myModal1">Delete  
+                    </a>  
+            </th>
             <th class="col-half">
                 Date
             </th>
@@ -58,6 +124,9 @@
         @foreach (var item in Model)
         {
             <tr>
+                <td style="width: 80px;">
+                    <input name="selector[]" id="ad_Checkbox1" class="ads_Checkbox" type="checkbox" value="@item.message.Id" />
+                </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.message.TimeStamp)
                 </td>
@@ -68,8 +137,8 @@
                     <a class='iframe' href="@Url.Action("Read", new { id = item.message.Id, type = "sent" })" title="To close, click anywhere outside this window">@Html.DisplayFor(modelItem => item.message.Subject)</a>
                 </td>
                 <td>
-                    <a class="color-icons cross_co" id="modalButton" data-toggle="modal"
-                                    href="@Html.Raw("#myModal" + item.message.Id)"></a>
+                    <a class="color-icons cross_co" id="modalButton" data-toggle="modal" href="@Html.Raw("#myModal" + item.message.Id)">
+                    </a>
                 </td>
             </tr>
             <div class="modal hide" id="@Html.Raw("myModal" + item.message.Id)">
@@ -90,6 +159,27 @@
                             Cancel</a>
                 </div>
             </div>
+            
+            <div class="modal hide" id="myModal1">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">
+                        ×</button>
+                    <h4>
+                        Confirm</h4>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        Confirm delete?
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <a href="@item.message.Id" name="@Html.Raw("deleteCkbSent")" class="btn btn-mini btn-warning" data-dismiss="modal">
+                        Delete</a> &nbsp; <a href="#" id="dismissModal" class="btn btn-mini btn-info" data-dismiss="modal">
+                            Cancel</a>
+                </div>
+            </div>
+            
+           
             <script>
                 $('#@Html.Raw("myModal" + item.message.Id)').on('shown', function (e) {
                     var modal = $(this);
