--- a/StormWeb/Views/Report/RunReport.cshtml
+++ b/StormWeb/Views/Report/RunReport.cshtml
@@ -1,13 +1,11 @@
 ﻿@model StormWeb.Models.ReportViewModel
-
 @{
     ViewBag.Title = "Run Report";
 }
-
-<h2></h2>
+<h2>
+</h2>
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
 <script>
 
     $(function () {
@@ -30,7 +28,6 @@
     });
 
 </script>
-
 <div class="row-fluid">
     <div class="span12">
         <div class="box-tab">
@@ -39,126 +36,112 @@
                     &nbsp;&nbsp;Reports
                 </h1>
             </div>
-                <div class="widget-content">
-        <div class="widget-box" style="padding: 15px;">
-            <div>
-            @using (Html.BeginForm("RunReport", "Report", FormMethod.Post, new {@class="form-horizontal"}))
-            {
-                <div class="control-group">
-                    <label class="control-label">
-                        Type</label>
-                    <div class="controls">
-                        @Html.DropDownListFor(r => r.reportType, new SelectList((from node in System.Xml.Linq.XDocument.Load(System.Web.HttpContext.Current.Server.MapPath("ReportType.xml")).Descendants("report")
-                                                                                 select new System.Web.UI.WebControls.ListItem(node.Element("name").Value, node.Element("code").Value))
+            <div class="widget-content">
+                <div class="widget-box" style="padding: 15px;">
+                    <div>
+                        @using (Html.BeginForm("RunReport", "Report", FormMethod.Post, new { @class = "form-horizontal" }))
+                        {
+                            @Html.ValidationSummary();
+                            <div class="control-group">
+                                <label class="control-label">
+                                    Type</label>
+                                <div class="controls">
+                                    @Html.DropDownListFor(r => r.reportType, new SelectList((from node in System.Xml.Linq.XDocument.Load(System.Web.HttpContext.Current.Server.MapPath("ReportType.xml")).Descendants("report")
+                                                                                             select new System.Web.UI.WebControls.ListItem(node.Element("name").Value, node.Element("code").Value))
                 ))
-                    </div>
-                </div>
-                <div class="control-group">
-                    <label class="control-label">
-                        Range
-                    </label>
-                    <div class="controls">
-                        <label class="radio">
-                            @Html.RadioButtonFor(m => m.allTime, true, new { id = "allTime_true" }) All time
-                        </label>
-                        <label class="radio">
-                            @Html.RadioButtonFor(m => m.allTime, false, new { id = "allTime_false" }) Date Restricted
-                        </label>
-                    </div>
-                </div>
-                 <div id="DateRange" style="display:none">
-                    <div class="control-group">
-                        <div class="input-append date" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
-                            <div class="control-group">
-                                @Html.Label("Start Date", null, new { @class = "control-label" })
-                                <div class="controls">
-                                    <div class="input-append">
-                                        @Html.EditorFor(model => model.dateTimeStart)
-                                       @* @Html.TextBoxFor(model => model.dateTimeStart, new { @readonly = "readonly", @class = "dp1" })*@
-                                    </div>
-                                    <p class="help-block">
-                                        @Html.ValidationMessageFor(model => model.dateTimeStart)
-                                    </p>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-               
-                    <div class="control-group">
-                        <div class="input-append date" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
                             <div class="control-group">
-                                @Html.Label("End Date", null, new { @class = "control-label" })
+                                <label class="control-label">
+                                    Range
+                                </label>
                                 <div class="controls">
-                                    <div class="input-append">
-                                        @Html.EditorFor(model => model.dateTimeEnd)
-                                    </div>
-                                    <p class="help-block">
-                                        @Html.ValidationMessageFor(model => model.dateTimeEnd)
-                                    </p>
+                                    <label class="radio">
+                                        @Html.RadioButtonFor(m => m.allTime, true, new { id = "allTime_true" }) All time
+                                    </label>
+                                    <label class="radio">
+                                        @Html.RadioButtonFor(m => m.allTime, false, new { id = "allTime_false" }) Date Restricted
+                                    </label>
                                 </div>
                             </div>
-                        </div>
+                            <div id="DateRange" style="display: none">
+                                <div class="control-group">
+                                    <div class="input-append date" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
+                                        <div class="control-group">
+                                            @Html.Label("Start Date", null, new { @class = "control-label" })
+                                            <div class="controls">
+                                                <div class="input-append">
+                                                    @Html.EditorFor(model => model.dateTimeStart)
+                                                    @* @Html.TextBoxFor(model => model.dateTimeStart, new { @readonly = "readonly", @class = "dp1" })*@
+                                                </div>
+                                                <p class="help-block">
+                                                    @Html.ValidationMessageFor(model => model.dateTimeStart)
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="control-group">
+                                    <div class="input-append date" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
+                                        <div class="control-group">
+                                            @Html.Label("End Date", null, new { @class = "control-label" })
+                                            <div class="controls">
+                                                <div class="input-append">
+                                                    @Html.EditorFor(model => model.dateTimeEnd)
+                                                </div>
+                                                <p class="help-block">
+                                                    @Html.ValidationMessageFor(model => model.dateTimeEnd)
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="controls">
+                                    <div class="span8">
+                                        <div class="accordion-basic" id="list-accordion">
+                                            <a class="title">Filter by Branch</a>
+                                            <div>
+                                                <!-- Branch Filter -->
+                                                <p>
+                                                    @Html.DropDownListFor(x => x.Branch, (SelectList)ViewBag.Branch_Id, "-- All --" )
+                                                </p>
+                                            </div>
+                                            <a class="title">Filter by Location</a>
+                                            <div>
+                                                <p>
+                                                    @Html.DropDownListFor(x => x.Location, (SelectList)ViewBag.Location, "-- All --")
+                                                </p>
+                                            </div>
+                                            <a class="title last">Filter by Associate</a>
+                                            <div>
+                                                <p>
+                                                    @Html.DropDownListFor(x => x.Associate, (SelectList)ViewBag.AssociateId, "-- All --")
+                                                </p>
+                                            </div>
+                                            <a class="title last">Filter by University</a>
+                                            <div>
+                                                <p>
+                                                    @Html.DropDownListFor(x => x.University, (SelectList)ViewBag.University, "-- All --")
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="controls">
+                                    <input type="submit" class="btn btn-large btn-primary" />
+                                </div>
+                            </div>
+                        }
                     </div>
                 </div>
-                <div class="control-group">
-                    <div class="controls">
-                        <input type="submit" class="btn btn-large btn-primary" />
-                    </div>
-                </div>
-            }
             </div>
         </div>
     </div>
-        </div>
-
-    </div>
-
 </div>
-
-
-
-@*@using (Html.BeginForm("RunReport", "Report",
-        FormMethod.Post, new {  enctype = "multipart/form-data" }))
-{
-    @Html.ValidationSummary(true)
-    <fieldset>
-        <legend>Report Selection</legend>
-
-        Branch:
-        <div class="editor-field">
-            @Html.DropDownList("Branch_Id", "--Select--")
-        </div>
-        Date From :
-        <div class="editor-field">
-        
-            @Html.TextBox("Date_From", DateTime.Now.ToShortDateString(), new { @class = "dp" })
-        </div>
-
-        Date To :
-        <div class="editor-field">
-            @Html.TextBox("Date_To", DateTime.Now.ToShortDateString(), new { @class = "dp" })
-        </div>
-
-        <label for="branch">
-        Select Report Type :
-        </label>
-                        <div class="control-group">
-                        <div class="controls">
-                            <label class="radio">
-                                @Html.RadioButton("report", "Option1", new { id = "Option1", @class = "radio-b" })
-                                List Of Staffs</label>
-                            <label class="radio">
-                                @Html.RadioButton("report", "Option2", new { id = "option2", @class = "radio-b" })
-                                List Of Students</label>
-                        </div>
-                    </div>
-
-
-        <p>
-            <input type="submit" value="Run"  />
-        </p>
-    </fieldset>
-}*@
 <script type="text/javascript">
     $(document).ready(function () {
         // For DatePicker
@@ -171,6 +154,12 @@
             showOn: "button",
             buttonImage: "../Content/img/calendar_btn.png",
             buttonImageOnly: true
+        });
+
+        var emptyOpt = $('option').filter(function () { return $(this).html() == "-- All --"; });
+        var string;
+        emptyOpt.each(function () {
+            $(this).val(0);
         });
     });
 </script>
