--- a/StormWeb/Views/StaffCentre/Index.cshtml
+++ b/StormWeb/Views/StaffCentre/Index.cshtml
@@ -20,10 +20,6 @@ $(function () {
     });
     $("div.student-staff-button").html('<a href="@Url.Action("Index", "StudentStaff")" class="btn btn-success">More..</a>');
     $("div.tbl-searchbox select").addClass('tbl_length');
-/*$(".tbl_length").chosen({
-		disable_search_threshold: 4	
-	});
-		*/
 
 });
 </script>
@@ -63,7 +59,8 @@ $(function () {
                         </div>   
                         <hr />                            
                         
-                        @Html.Partial("_DashboardMenu")                        
+                        @Html.Partial("_DashboardMenu")
+                                               
                                       
                     </div>
                 </div>
@@ -71,12 +68,11 @@ $(function () {
         </div>
     </div>
     <div class="span3">
-        <div class="widget-block">
-            <div class="widget-head">
-                <h5>
-                    Quick status
-                </h5>
-            </div>
+     <div class="box-tab">
+        <div class="page-header">
+            <h1>
+                &nbsp; &nbsp;Quick status</h1>
+        </div> 
             <div class="widget-content">
                 <div class="widget-box">
                     <div class="well white-box">
@@ -127,6 +123,10 @@ $(function () {
                     </div>
                 </div>
             </div>
+            &nbsp;
+             <div class="span12" style="margin-left: 0;margin-top: 10px;">    
+                             @Html.Partial("~/Views/Advertisement/Partial/_ScrollingMarketing.cshtml", (IEnumerable<StormWeb.Models.Advertisement>) ViewBag.Ads)
+             </div> 
         </div>
     </div>
 </div>
@@ -221,78 +221,13 @@ $(function () {
     </div>                
 </div>
 }
-            <div class="row-fluid">
-<div class="box-tab span9">
-    <div class="page-header">
-        <h1>
-            Quick chart</h1>
-    </div>
-    <div class="widget-content">
-        <div class="content-area">
 
-                <div class="graph-placeholder" style="min-height: 400px;">
-
-            </div>
-        </div>
-    </div>
-</div>
-                </div>
 
 <script src="../../Scripts/jquery.flot.js" type="text/javascript"></script>
 
 <script>
 
     $(function () {
-        var sin = [], cos = [];
-
-
-        for (var i = 0; i < 14; i += 0.5) {
-            sin.push(i+1);
-            cos.push(i*2);
-        }
-
-        var plot = $.plot($(".graph-placeholder"),
-           [{ data: sin, label: "New Applications" }, { data: cos, label: "new Students"}], {
-               series: {
-                   lines: { show: true },
-                   points: { show: true }
-               },
-               grid: { hoverable: true, clickable: true },
-               yaxis: { min: -50, max: 50 }
-           });
-
-        function showTooltip(x, y, contents) {
-            $('<div id="tooltip">' + contents + '</div>').css({
-                position: 'absolute',
-                display: 'none',
-                top: y + 5,
-                left: x + 5,
-                border: '1px solid #fdd',
-                padding: '2px',
-                'background-color': '#fee',
-                opacity: 0.80
-            }).appendTo("body").fadeIn(200);
-        }
-
-        var previousPoint = null;
-        $(".graph-placeholder").bind("plothover", function (event, pos, item) {
-
-            if (item) {
-                if (previousPoint != item.dataIndex) {
-                    previousPoint = item.dataIndex;
-
-                    $("#tooltip").remove();
-                    var x = item.datapoint[0].toFixed(2),
-                        y = item.datapoint[1].toFixed(2);
-
-                    showTooltip(item.pageX, item.pageY,
-                                item.series.label + " of " + x + " = " + y);
-                }
-            }
-            else {
-                $("#tooltip").remove();
-                previousPoint = null;
-            }
-        });
+        
     });
 </script>
