--- a/StormWeb/Views/University/Edit.cshtml
+++ b/StormWeb/Views/University/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StormWeb.Models.University
 @{
     ViewBag.Title = "Edit";
-} 
+}
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 @using (Html.BeginForm())
@@ -9,72 +9,78 @@
     @Html.ValidationSummary(true)
     @Html.HiddenFor(model => model.University_Id)
   
-    <div class="form-horizontal well">
-        <fieldset style="margin-left: 50px;">
-            <legend>
-                <h2>
-                    Edit University Details</h2>
-            </legend>
-            <div class="control-group">
-                @Html.Label("Country", null, new { @class = "control-label form-required" })
-                <div class="controls">
-                    @Html.DropDownListFor(model => model.Country.Country_Id, (IEnumerable<SelectListItem>)ViewBag.Country_Id, "--Select--", new { @class = "chzn-select" })
-                    <p class="help-block">
-                        @Html.ValidationMessageFor(model => model.Country_Id)</p>
+   
+    <div class="form-horizontal row-fluid">
+        <div class="span12">
+            <div class="box-tab">
+                <div class="page-header">
+                    <h1>
+                        &nbsp;&nbsp;Edit University Details
+                    </h1>
+                </div>
+                <div class="widget-content">
+                    <div class="widget-box" style="padding: 50px;">
+                        <div class="control-group">
+                            @Html.Label("Country", null, new { @class = "control-label form-required" })
+                            <div class="controls">
+                                @Html.DropDownListFor(model => model.Country.Country_Id, (IEnumerable<SelectListItem>)ViewBag.Country_Id, "--Select--", new { @class = "chzn-select" })
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.Country_Id)</p>
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            @Html.Label("University Name", null, new { @class = "control-label form-required" })
+                            <div class="controls">
+                                @Html.EditorFor(model => model.University_Name, new { @class = "input-xlarge text-tip", placeholder = "University Name" })
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.University_Name)
+                                </p>
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            @Html.Label("Campus", null, new { @class = "control-label form-required" })
+                            <div class="controls">
+                                @Html.EditorFor(model => model.Campus, new { @class = "input-xlarge text-tip", placeholder = "Campus" })
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.Campus)
+                                </p>
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            @Html.Label("Email", null, new { @class = "control-label form-required" })
+                            <div class="controls">
+                                @Html.EditorFor(model => model.Email, new { @class = "input-xlarge text-tip", placeholder = "Email" })
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.Email)
+                                </p>
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            @Html.Label("Description", null, new { @class = "control-label form-required" })
+                            <div class="controls">
+                                @Html.TextAreaFor(model => model.Description, new { @class = "span11", rows = "10", cols = "10", id = "inbox-editor" })
+                                @Html.ValidationMessageFor(model => model.Description)
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            @Html.Label("Comission Rate", null, new { @class = "control-label form-required" })
+                            <div class="controls">
+                                @Html.TextBoxFor(model => model.Comission_Rate, new { @class = "input-small text-tip", placeholder = "Rate (%)" })
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.Comission_Rate)
+                                </p>
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <div class="controls">
+                                <input type="submit" value="Save Changes" class="btn btn-primary" />
+                                @Html.Button_DeleteOrCancel("Cancel", "../../University")
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="control-group">
-                @Html.Label("University Name", null, new { @class = "control-label form-required" })
-                <div class="controls">
-                    @Html.EditorFor(model => model.University_Name, new { @class = "input-xlarge text-tip", placeholder = "University Name" })
-                    <p class="help-block">
-                        @Html.ValidationMessageFor(model => model.University_Name)
-                    </p>
-                </div>
-            </div>
-            <div class="control-group">
-                @Html.Label("Campus", null, new { @class = "control-label form-required" })
-                <div class="controls">
-                    @Html.EditorFor(model => model.Campus, new { @class = "input-xlarge text-tip", placeholder = "Campus" })
-                    <p class="help-block">
-                        @Html.ValidationMessageFor(model => model.Campus)
-                    </p>
-                </div>
-            </div>
-            <div class="control-group">
-                @Html.Label("Email", null, new { @class = "control-label form-required" })
-                <div class="controls">
-                    @Html.EditorFor(model => model.Email, new { @class = "input-xlarge text-tip", placeholder = "Email" })
-                    <p class="help-block">
-                        @Html.ValidationMessageFor(model => model.Email)
-                    </p>
-                </div>
-            </div>
-            <div class="control-group">
-                @Html.Label("Description", null, new { @class = "control-label form-required" })
-                <div class="controls">
-                    @Html.TextAreaFor(model => model.Description, new { @class = "span11", rows = "10", cols = "10", id = "inbox-editor" })
-                    @Html.ValidationMessageFor(model => model.Description)
-                </div>
-            </div>
-            <div class="control-group">
-                @Html.Label("Comission Rate", null, new { @class = "control-label form-required" })
-                <div class="controls">
-                    @Html.TextBoxFor(model => model.Comission_Rate, new { @class = "input-small text-tip", placeholder = "Rate (%)" })
-                    <p class="help-block">
-                        @Html.ValidationMessageFor(model => model.Comission_Rate)
-                    </p>
-                </div>
-            </div>
-            <div class="control-group">
-                <div class="controls">
-                    <input type="submit" value="Save Changes" class="btn btn-primary" />
-                    @Html.Button_DeleteOrCancel("Cancel", "../../University")
-                </div>
-            </div>
-        </fieldset>
+        </div>
     </div>
-     
-    
      
 }
